--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,8 @@
         "task_imu.h": "c",
         "spi_common.h": "c",
         "math.h": "c",
-        "stdatomic.h": "c"
+        "stdatomic.h": "c",
+        "freertos.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled",
 }
