--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,8 @@
         "stdatomic.h": "c",
         "freertos.h": "c",
         "type_traits": "c",
-        "common_task_defs.h": "c"
+        "common_task_defs.h": "c",
+        "stm32u5xx_it.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled",
 }
